--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,7 +29,7 @@ a {
 	position: relative;
 }
 
-.template,.stream-template,.players-template {
+.template,.stream-template,.players-template,.demo-template {
 	display: none;
 }
 .top {
@@ -86,9 +86,15 @@ a {
 	overflow: hidden;
 }
 
-.server, .stream {
+.server, .stream, .demo {
 
 	// margin-top: 5px;
+
+	&.highlight {
+		background-color: darken($bgc,10%);
+		border-top: 1px solid darken($bgc, 2%);
+		border-bottom: 1px solid darken($bgc, 20%);
+	}
 
 	background-color: lighten($bgc,10%);
 	padding: 5px 10px;
@@ -98,6 +104,14 @@ a {
 
 	&:nth-child(even) {
 		background-color: lighten($bgc,5%);
+
+		&.highlight {
+			background-color: darken($bgc,5%);
+		}
+	}
+
+	&:hover {
+		opacity: 1;
 	}
 
 	p {
@@ -121,6 +135,12 @@ a {
 	.play {
 		position: absolute;
 		right: 15px;
+		top: 25px;
+	}
+
+	.download {
+		position: absolute;
+		right: 10px;
 		top: 25px;
 	}
 
@@ -165,6 +185,23 @@ a {
 	color: $fc;
 	&:hover {
 		color: $fc;
+	}
+}
+
+#demos {
+	.search {
+		border-bottom: 1px solid darken($bgc, 5%);
+		input {
+			width: 100%;
+			height: 100%;
+			background-color: lighten($bgc, 3%);
+			border: 0;
+			color: $fc;
+			padding: 2px 10px;
+			&:focus {
+				outline: 0;
+			}
+		}
 	}
 }
 
