--- a/style.css
+++ b/style.css
@@ -1,303 +1,1 @@
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-/* entypo */
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif; }
-
-/**
- * TrackpadScrollEmulator
- * Version: 1.0.1
- * Author: Jonathan Nicol @f6design
- * https://github.com/jnicol/trackpad-scroll-emulator
- */
-.tse-scrollable {
-  position: relative;
-  overflow: hidden; }
-
-.tse-scrollable .tse-scroll-content {
-  overflow: hidden;
-  overflow-y: scroll; }
-
-/* No longer using ::scrollbar too, since it breaks Chrome 25 */
-.tse-scrollable .tse-scroll-content::-webkit-scrollbar {
-  width: 0;
-  height: 0; }
-
-.tse-scrollbar {
-  z-index: 99;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 11px; }
-
-.tse-scrollbar .drag-handle {
-  position: absolute;
-  right: 2px;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  border-radius: 7px;
-  min-height: 10px;
-  width: 7px;
-  opacity: 0;
-  -webkit-transition: opacity 0.2s linear;
-  -moz-transition: opacity 0.2s linear;
-  -o-transition: opacity 0.2s linear;
-  -ms-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear;
-  background: #202122;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding; }
-
-.tse-scrollbar:hover .drag-handle {
-  /* When hovered, remove all transitions from drag handle */
-  opacity: 0.7;
-  -webkit-transition: opacity 0 linear;
-  -moz-transition: opacity 0 linear;
-  -o-transition: opacity 0 linear;
-  -ms-transition: opacity 0 linear;
-  transition: opacity 0 linear; }
-
-.tse-scrollbar .drag-handle.visible {
-  opacity: 0.7; }
-
-/* Used when testing the scrollbar width */
-/* No longer using ::scrollbar too, since it breaks Chrome 25 */
-.scrollbar-width-tester::-webkit-scrollbar {
-  width: 0;
-  height: 0; }
-
-/* Horizontal scroller */
-.tse-scrollable.horizontal .tse-scroll-content {
-  overflow-x: scroll;
-  overflow-y: hidden; }
-
-.tse-scrollable.horizontal .tse-scroll-content::-webkit-scrollbar,
-.tse-scrollable.horizontal .tse-scroll-content::scrollbar {
-  width: auto;
-  height: 0; }
-
-.tse-scrollable.horizontal .tse-scrollbar {
-  top: auto;
-  left: 0;
-  width: auto;
-  height: 11px; }
-
-.tse-scrollable.horizontal .tse-scrollbar .drag-handle {
-  right: auto;
-  top: 2px;
-  height: 7px;
-  min-height: 0;
-  min-width: 10px;
-  width: auto; }
-
-body {
-  width: 400px;
-  height: 490px;
-  color: white;
-  font-family: Verdana,Helvetica,sans-serif;
-  font-size: 11px;
-  margin: 0;
-  padding: 0;
-  background-color: #4c473a; }
-
-*:not(input) {
-  box-sizing: border-box; }
-
-a {
-  color: #e1cd9b;
-  text-decoration: none; }
-  a:hover {
-    color: #eee; }
-
-#nav-streams {
-  position: relative; }
-
-.template, .stream-template, .players-template, .demo-template {
-  display: none; }
-
-.top {
-  padding: 5px;
-  background-color: #1F1D18; }
-  .top [class*="entypo-"] {
-    font-size: 20px; }
-  .top .loader {
-    display: none;
-    height: 9px;
-    margin: 8px 10px; }
-
-.menu {
-  width: 39px;
-  height: 455px;
-  background-color: #1F1D18;
-  position: fixed;
-  left: 0;
-  top: 35px;
-  z-index: 9999; }
-  .menu a {
-    color: #ccc; }
-  .menu [class*="entypo-"] {
-    width: 100%;
-    height: 39px;
-    display: block;
-    text-align: center;
-    font-size: 30px; }
-    .menu [class*="entypo-"]:hover {
-      background-color: #403c31; }
-    .menu [class*="entypo-"].active {
-      background-color: #38342b; }
-
-.content {
-  border-radius: 2px;
-  width: 400px;
-  height: 455px;
-  overflow: auto;
-  padding: 0 0px 0 39px;
-  float: left;
-  overflow: hidden; }
-
-.server, .stream, .demo {
-  background-color: #696250;
-  padding: 5px 10px;
-  border-top: 1px solid #867d66;
-  border-bottom: 1px solid #2f2c24;
-  position: relative; }
-  .server.highlight, .stream.highlight, .demo.highlight {
-    background-color: #2f2c24;
-    border-top: 1px solid #464236;
-    border-bottom: 1px solid #12110e; }
-  .server:nth-child(even), .stream:nth-child(even), .demo:nth-child(even) {
-    background-color: #5a5545; }
-    .server:nth-child(even).highlight, .stream:nth-child(even).highlight, .demo:nth-child(even).highlight {
-      background-color: #3e392f; }
-  .server:hover, .stream:hover, .demo:hover {
-    opacity: 1; }
-  .server p, .stream p, .demo p {
-    margin: 0; }
-  .server [class*="entypo-"], .stream [class*="entypo-"], .demo [class*="entypo-"] {
-    font-size: 22px;
-    color: #867d66; }
-    .server [class*="entypo-"]:hover, .stream [class*="entypo-"]:hover, .demo [class*="entypo-"]:hover {
-      color: #cbc6ba; }
-  .server .watch, .stream .watch, .demo .watch {
-    position: absolute;
-    right: 10px;
-    top: 5px; }
-  .server .play, .stream .play, .demo .play {
-    position: absolute;
-    right: 15px;
-    top: 25px; }
-  .server .download, .stream .download, .demo .download {
-    position: absolute;
-    right: 10px;
-    top: 25px; }
-  .server .levelshot, .server .preview, .stream .levelshot, .stream .preview, .demo .levelshot, .demo .preview {
-    float: left;
-    height: 53px;
-    width: 69px;
-    overflow: hidden;
-    background-image: url("levelshots/_notfound.jpg");
-    background-size: cover;
-    cursor: pointer;
-    position: relative;
-    border: 2px solid #4c473a; }
-    .server .levelshot .flag, .server .preview .flag, .stream .levelshot .flag, .stream .preview .flag, .demo .levelshot .flag, .demo .preview .flag {
-      position: absolute;
-      top: 4px;
-      left: 4px;
-      z-index: 999; }
-    .server .levelshot .stream-preview, .server .preview .stream-preview, .stream .levelshot .stream-preview, .stream .preview .stream-preview, .demo .levelshot .stream-preview, .demo .preview .stream-preview {
-      width: inherit;
-      height: inherit; }
-  .server .info, .stream .info, .demo .info {
-    float: left;
-    margin-left: 3px; }
-  .server:after, .stream:after, .demo:after {
-    clear: both;
-    content: ".";
-    display: block;
-    visibility: hidden;
-    height: 0; }
-
-.stream {
-  display: block;
-  color: white; }
-  .stream:hover {
-    color: white; }
-
-#demos .search {
-  border-bottom: 1px solid #3e392f; }
-  #demos .search input {
-    width: 100%;
-    height: 100%;
-    background-color: #554f41;
-    border: 0;
-    color: white;
-    padding: 2px 10px; }
-    #demos .search input:focus {
-      outline: 0; }
-
-.players-big {
-  width: 100%;
-  padding: 5px 10px;
-  background-color: #292720;
-  position: relative; }
-  .players-big .score {
-    margin: 0 auto;
-    padding: 5px;
-    background-color: #211e19;
-    display: none;
-    text-align: center; }
-  .players-big table {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%; }
-    .players-big table thead tr > th {
-      border-bottom: 1px solid #696250; }
-    .players-big table tbody > tr > td {
-      padding: 2px; }
-    .players-big table .pfrags {
-      text-align: center;
-      text-shadow: 1px 1px 1px #000; }
-
-.container {
-  padding: 5px 10px; }
-
-h4 {
-  margin: 0;
-  font-size: 14px;
-  color: #cccccc; }
-
-.pull-right {
-  float: right; }
-
-.badge {
-  padding: 1px 9px 2px;
-  font-size: 8px;
-  font-weight: bold;
-  white-space: nowrap;
-  color: #ffffff;
-  background-color: #b94a48;
-  border-radius: 9px;
-  position: absolute;
-  top: -1px;
-  right: -1px;
-  padding: 3px; }
-
-.hand {
-  cursor: pointer; }
-
-.left {
-  text-align: left; }
-
-.center {
-  text-align: center; }
-
-.clearfix:after {
-  clear: both;
-  content: ".";
-  display: block;
-  visibility: hidden;
-  height: 0; }
-
-.non-active {
-  display: none; }
+@import url(http://weloveiconfonts.com/api/?family=entypo);[class*="entypo-"]:before{font-family:'entypo', sans-serif}.tse-scrollable{position:relative;overflow:hidden}.tse-scrollable .tse-scroll-content{overflow:hidden;overflow-y:scroll}.tse-scrollable .tse-scroll-content::-webkit-scrollbar{width:0;height:0}.tse-scrollbar{z-index:99;position:absolute;top:0;right:0;bottom:0;width:11px}.tse-scrollbar .drag-handle{position:absolute;right:2px;-webkit-border-radius:7px;-moz-border-radius:7px;border-radius:7px;min-height:10px;width:7px;opacity:0;-webkit-transition:opacity 0.2s linear;-moz-transition:opacity 0.2s linear;-o-transition:opacity 0.2s linear;-ms-transition:opacity 0.2s linear;transition:opacity 0.2s linear;background:#202122;-webkit-background-clip:padding-box;-moz-background-clip:padding}.tse-scrollbar:hover .drag-handle{opacity:0.7;-webkit-transition:opacity 0 linear;-moz-transition:opacity 0 linear;-o-transition:opacity 0 linear;-ms-transition:opacity 0 linear;transition:opacity 0 linear}.tse-scrollbar .drag-handle.visible{opacity:0.7}.scrollbar-width-tester::-webkit-scrollbar{width:0;height:0}.tse-scrollable.horizontal .tse-scroll-content{overflow-x:scroll;overflow-y:hidden}.tse-scrollable.horizontal .tse-scroll-content::-webkit-scrollbar,.tse-scrollable.horizontal .tse-scroll-content::scrollbar{width:auto;height:0}.tse-scrollable.horizontal .tse-scrollbar{top:auto;left:0;width:auto;height:11px}.tse-scrollable.horizontal .tse-scrollbar .drag-handle{right:auto;top:2px;height:7px;min-height:0;min-width:10px;width:auto}body{width:400px;height:490px;color:#fff;font-family:Verdana,Helvetica,sans-serif;font-size:11px;margin:0;padding:0;background-color:#4c473a}*:not(input){box-sizing:border-box}a{color:#e1cd9b;text-decoration:none}a:hover{color:#eee}#nav-streams{position:relative}.template,.stream-template,.players-template,.demo-template{display:none}.top{padding:5px;background-color:#1F1D18}.top [class*="entypo-"]{font-size:20px}.top .loader{display:none;height:9px;margin:8px 10px}.menu{width:39px;height:455px;background-color:#1F1D18;position:fixed;left:0;top:35px;z-index:9999}.menu a{color:#ccc}.menu [class*="entypo-"]{width:100%;height:39px;display:block;text-align:center;font-size:30px}.menu [class*="entypo-"]:hover{background-color:#403c31}.menu [class*="entypo-"].active{background-color:#38342b}.content{border-radius:2px;width:400px;height:455px;overflow:auto;padding:0 0px 0 39px;float:left;overflow-x:hidden}.server,.stream,.demo{background-color:#696250;padding:5px 10px;border-top:1px solid #867d66;border-bottom:1px solid #2f2c24;position:relative}.server.highlight,.stream.highlight,.demo.highlight{background-color:#2f2c24;border-top:1px solid #464236;border-bottom:1px solid #12110e}.server:nth-child(even),.stream:nth-child(even),.demo:nth-child(even){background-color:#5a5545}.server:nth-child(even).highlight,.stream:nth-child(even).highlight,.demo:nth-child(even).highlight{background-color:#3e392f}.server:hover,.stream:hover,.demo:hover{opacity:1}.server p,.stream p,.demo p{margin:0}.server [class*="entypo-"],.stream [class*="entypo-"],.demo [class*="entypo-"]{font-size:22px;color:#867d66}.server [class*="entypo-"]:hover,.stream [class*="entypo-"]:hover,.demo [class*="entypo-"]:hover{color:#cbc6ba}.server .watch,.stream .watch,.demo .watch{position:absolute;right:10px;top:5px}.server .play,.stream .play,.demo .play{position:absolute;right:15px;top:25px}.server .download,.stream .download,.demo .download{position:absolute;right:10px;top:25px}.server .levelshot,.server .preview,.stream .levelshot,.stream .preview,.demo .levelshot,.demo .preview{float:left;height:53px;width:69px;overflow:hidden;background-image:url("levelshots/_notfound.jpg");background-size:cover;cursor:pointer;position:relative;border:2px solid #4c473a}.server .levelshot .flag,.server .preview .flag,.stream .levelshot .flag,.stream .preview .flag,.demo .levelshot .flag,.demo .preview .flag{position:absolute;top:4px;left:4px;z-index:999}.server .levelshot .stream-preview,.server .preview .stream-preview,.stream .levelshot .stream-preview,.stream .preview .stream-preview,.demo .levelshot .stream-preview,.demo .preview .stream-preview{width:inherit;height:inherit}.server .info,.stream .info,.demo .info{float:left;margin-left:3px}.server:after,.stream:after,.demo:after{clear:both;content:".";display:block;visibility:hidden;height:0}.stream{display:block;color:#fff}.stream:hover{color:#fff}#demos .search{border-bottom:1px solid #3e392f}#demos .search input{width:100%;height:100%;background-color:#554f41;border:0;color:#fff;padding:2px 10px}#demos .search input:focus{outline:0}.players-big{width:100%;padding:5px 10px;background-color:#292720;position:relative}.players-big .score{margin:0 auto;padding:5px;background-color:#211e19;display:none;text-align:center}.players-big table{margin-left:auto;margin-right:auto;width:100%}.players-big table thead tr>th{border-bottom:1px solid #696250}.players-big table tbody>tr>td{padding:2px}.players-big table .pfrags{text-align:center;text-shadow:1px 1px 1px #000}.container{padding:5px 10px}h4{margin:0;font-size:14px;color:#ccc}.pull-right{float:right}.badge{padding:1px 9px 2px;font-size:8px;font-weight:bold;white-space:nowrap;color:#ffffff;background-color:#b94a48;border-radius:9px;position:absolute;top:-1px;right:-1px;padding:3px}.hand{cursor:pointer}.left{text-align:left}.center{text-align:center}.clearfix:after{clear:both;content:".";display:block;visibility:hidden;height:0}.non-active{display:none}::-webkit-scrollbar{width:8px;opacity:0}::-webkit-scrollbar-thumb{border-radius:4px;background:rgba(255,255,255,0.6)}::-webkit-scrollbar-thumb:active{background:#fff}
